test/org/midica/testfiles/failing/pattern-with-if-2.midica
INCLUDE inc/instruments.midica

0  c/d/e  pat_a( y )

PATTERN pat_a
	0  pat_b( x, y, z )  if $[0] == x
END

PATTERN pat_b
	0  /1
END
